templates/02_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: foundryvtt-service
spec:
  selector:
    app: foundryvtt
  ports:
    - protocol: TCP
      port: 80
      targetPort: 30000
...
