templates/03_ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: foundryvtt-ingress-route
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`filbot.net`) && Path(`/`)
      services:
        - name: foundryvtt-service
          port: 80
...
